fixed problem with computer not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ p {
     color: rgb(218, 165,32);
 }
 
+#wordlocation {
+    color: rgb(218, 200, 0);
+}
 /* Teal 0285A7 -- 2 133 167
 Blue 4396DF -- 67 150 223
 Goldenrod DAA520 -- 218 165 32
